# sprint

./: .gitignore  README.md  pyproject.toml
api/: main.py  pyproject.toml
api/v1/routers/: __init__.py  forecast.py  health.py
api/v1/schemas/: __init__.py  forecast_request.py  forecast_response.py
artifacts/checkpoints/checkpoint-100/: model.safetensors  optimizer.pt  trainer_state.json
artifacts/checkpoints/checkpoint-200/: model.safetensors  optimizer.pt  trainer_state.json
artifacts/checkpoints/checkpoint-300/: model.safetensors  optimizer.pt  trainer_state.json
artifacts/checkpoints/checkpoint-400/: model.safetensors  optimizer.pt  trainer_state.json
artifacts/checkpoints/checkpoint-500/: model.safetensors  optimizer.pt  trainer_state.json
artifacts/checkpoints/checkpoint-600/: config.json  model.safetensors  optimizer.pt  (+1 more)
backend/: pyproject.toml
backend/src/backend/: __init__.py  registry.py  types.py
backend/src/backend/callbacks/: early_stopping.py
backend/src/backend/data/loaders/: __init__.py  stock_loader.py  tickers_loader.py
backend/src/backend/data/processors/: __init__.py  data_loader_factory.py  standardizer.py  ticker_encoder.py  train_test_split.py  walk_forward_splitter.py  window_generator.py
backend/src/backend/datasets/: __init__.py  windowed_dataset.py
backend/src/backend/layers/: __init__.py  decomposition.py  destationary_attention.py  nst_encoder.py  patching.py  positional_encoding.py  revin.py  series_stationarization.py  tst_encoder.py
backend/src/backend/loaders/: __init__.py
backend/src/backend/losses/: __init__.py  quantile_loss.py
backend/src/backend/metrics/: __init__.py  mean_absolute_error.py  mean_directional_accuracy.py  mean_squared_error.py  prediction_interval_coverage.py  r2_score.py  root_mean_squared_error.py  symmetric_mean_absolute_percentage_error.py
backend/src/backend/models/: bootstrap.py  registry.py  service.py  types.py
backend/src/backend/models/linear/: __init__.py  dlinear.py  mlp.py
backend/src/backend/models/rnn/: __init__.py  lstm.py  patchlstm.py
backend/src/backend/models/transformers/: __init__.py  itransformer.py  nst.py  patchtst.py  vanilla.py
backend/src/backend/processors/: __init__.py  standard_scaler.py  standardizer.py  train_test_split.py
backend/src/backend/services/: __init__.py  cross_evaluator_service.py  data_service.py  forecasting_model_service.py  metrics_evaluator_service.py  plotting_service.py  trainer_service.py
backend/src/backend/types/: data.py  model.py  tickers.py
data/day/: DGW.csv  FRT.csv  HPG.csv  NKG.csv  VHM.csv
data/tickers/: vocab_latest.json
data/week/: FRT.csv  NKG.csv  OCB.csv  PDR.csv  VCB.csv
notebooks/: 01_baseline.ipynb  01_experiments.py  02_training.py  03_tickers_vocab.py  04_cross_evaluation.py  05_evaluation.py  06_experiments_patchtst.py  07_final_training.py  pyproject.toml
notebooks/.ipynb_checkpoints/: 01_baseline-checkpoint.ipynb
paper/: main.typ
scripts/: add_sentiment.py  evaluate.py  pyproject.toml  quote_history.py  train.py
src/stock_forecasting/: __init__.py
(+39 files in other folders)
