[project]
name = "stock-price-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "backend",
    "notebooks",
    "api",
    "scripts",
]

[dependency-groups]
dev = [
    "poethepoet>=0.44.0",
]

[tool.poe.tasks]
start = "uv run --directory api fastapi run"
dev = "uv run --directory api fastapi dev"
