[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv.sources]
torch = [
    {
        index = "pytorch-cu128",
        marker = "sys_platform == 'linux' or sys_platform == 'win32'",
    },
]
torchvision = [
    {
        index = "pytorch-cu128",
        marker = "sys_platform == 'linux' or sys_platform == 'win32'",
    },
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
